--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
+
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Blog de ">
+        <meta name="author" content="Pascal Fromentin">
+
+        <title>{% block title %}Welcome to my Blog!{% endblock %}</title>
+
+        <!-- Bootstrap core CSS -->
+        <link rel="stylesheet" href="/css/bootstrap.css">
+
+          <!-- Custom fonts for this template -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+          <!-- Custom styles for this template -->
+        <link rel="stylesheet" href="/css/clean-blog.min.css" >
+
         {% block stylesheets %}{% endblock %}
+
     </head>
+
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+      <!-- Navigation -->
+      {% include 'partials/header.html.twig' %}
+
+      {% block body %}{% endblock %}
+
+      {% include 'partials/footer.html.twig' %}
+
+
+      <script type="text/javascript" src="/js/jquery.min.js"></script>
+      <script type="text/javascript" src="/js/popper.min.js"></script>
+      <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+      <script type="text/javascript"src="/js/clean-blog.js"></script>
+      <script src="https://kit.fontawesome.com/5d9293ae7b.js" crossorigin="anonymous"></script>
+      {% block javascripts %}{% endblock %}
+
     </body>
+
 </html>
