--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,11 +4,21 @@
 
 {% block body %}
 
-c
+    <!-- Page Header -->
+  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h1>Nos Aticles</h1>
+            <span class="subheading">Bonne lecture...</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
-
-<!--<section class="articles">
-  <article class="container">-->
  <!-- Main Content -->
   <div class="container">
     <div class="row">
