--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
       <!-- Page Header -->
-  <header class="masthead" style="background-image: url('/img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('/img/home-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
