--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
